Worked on Custom CSS
Added Basic menu title and a some non-functional  buttons for signing up/logging in, databases, and the quiz

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,20 @@
+/* General Stuff */
+.center {
+    margin: auto;
+    text-align: center;
+    width: 50%;
+
+}
+
+.solidborder {
+    border-style: solid; 
+    border-radius: 8px;
+    padding: 2px;
+}
+
+.blueborder {
+    border-color: blue;
+}
 /* Custom styles for cards */
 .card {
     transition: transform 0.1s ease-in-out;
