--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
 
 <body>
-<h2>Gang's Garage: The Complete Collection</h2>
+    <div class="center blueborder solidborder">
+        <h2 class="">Gang's Garage: The Complete Collection</h2>
+        <div>
+            <h3 class="btn-primary btn">Sign Up/Log in</h3>
+            <h3 class="btn-primary btn">Databases</h3>
+            <h3 class="btn-primary btn">Quiz</h3>
+        </div>
+    </div>
 </body>
 
 
