Added database, signin, and quiz html files and made buttons functional

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{url_for('index')}}">The Gang's Garage</a>
+                <a class="navbar-brand" href="{{url_for('menu')}}">Gang's Garage</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -85,7 +85,7 @@
                         name = "name"
                         class="form-control me-2"
                         type="search"
-                        placeholder="Enter Vehicle Name..."
+                        placeholder="Search..."
                         aria-label="Search"
                     />
                     <button class="btn btn-outline-success" type="submit" >Search</button>
