Added stuff to collection.db and stuff
Added databaseid and other stuff

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -19,7 +19,7 @@
             <a 
             class="btn-primary btn" 
             href="{{url_for('index')}}" 
-            role="button">index</a>
+            role="button">Index</a>
         </div>
     </div>
 </body>
