Changed collection.db a bit and added an image and stuff

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,7 +10,7 @@
             role="button">Sign Up/Log in</a>
             <a 
             class="btn-primary btn" 
-            href="{{url_for('view_databases')}}" 
+            href="{{url_for('databases')}}" 
             role="button">Databases</a>
             <a 
             class="btn-primary btn" 
