--- a/templates/database.html
+++ b/templates/database.html
@@ -15,7 +15,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="exampleModalLabel">
-            Add New Vehicle
+            Add New Database
           </h1>
           <button
             type="button"
@@ -29,17 +29,17 @@
             <!--Image-->
             <div class="mb-3">
               <label for="image" class="form-label">Image URL</label>
-              <textarea class="form-control" id="vehicle-img" name="Image"></textarea>
+              <textarea class="form-control" id="database-img" name="Image"></textarea>
             </div>
             <!--Name-->
             <div class="mb-3">
               <label for="recipient-name" class="col-form-label">Name<br>e.g: Ronald's Database</label>
-              <input type="text" class="form-control" id="vehicle-name" name='Name'/>
+              <input type="text" class="form-control" id="database-name" name='Name'/>
             </div>
             <!--Description-->
             <div class="mb-3">
               <label for="message-text" class="col-form-label"></label>Description</label>
-              <textarea class="form-control" id="vehicle-description" name="Description"></textarea>
+              <textarea class="form-control" id="database-description" name="Description"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Add Database</button>
             <button
@@ -64,13 +64,13 @@
   <!--Grid Layout-->
   <div class="container">
     <div class="row">
-      {% for vehicle in vehicles %}
+      {% for database in databases %}
       <div class="col-12 col-md-6 col-lg-4 justify-content-center">
         <div class="card mb-4 custom-bg">
           <img
-            src="{{vehicle.image}}"
+            src="{{database.image}}"
             class="card-img-top"
-            alt="Picture of {{vehicle.name}}"
+            alt="Picture of {{database.name}}"
             width="300"
             height="225"
           />
@@ -78,19 +78,19 @@
             <h5 class="card-title cardtext">{{database.name}}</h5>
             <p class="cardtext">{{database.description}}</p>
 
-            <!-- View Vehicle Button -->
+            <!-- View Database Button -->
             <a 
             class="btn btn-primary" 
             href="{{url_for('view_database', id=database.id)}}" 
             role="button"
             >View Details</a>
-            <!-- Edit Vehicle Button -->
+            <!-- Edit Database Button -->
             <a 
             class="btn btn-primary" 
             href="{{url_for('edit_database', id=database.id)}}" 
             role="button"
             >Edit Details</a>
-            <!-- Delete Vehicle Button -->
+            <!-- Delete Database Button -->
             <a 
             class="btn btn-primary" 
             href="{{url_for('delete_database', id=database.id)}}" 
