--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
           ></button>
         </div>
         <div class="modal-body">
-          <form action="/add" method="POST">
+          <form action="/add_vehicle" method="POST">
             <!--Image-->
             <div class="mb-3">
               <label for="image" class="form-label">Image URL</label>
