--- a/templates/base.html
+++ b/templates/base.html
@@ -58,7 +58,7 @@
                         data-bs-toggle="modal"
                         data-bs-target="#exampleModal"
                     >
-                        Add Vehicle
+                        Add
                     </button>
                     <li class="nav-item dropdown">
                         <a
@@ -72,7 +72,7 @@
                         </a>
                         <!--Dropdown Menu-->
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Add Vehicle</a></li>
+                            <li><a class="dropdown-item" href="#">Add</a></li>
                             <li><a class="dropdown-item" href="#">Contact Us</a></li>
                             <li><hr class="dropdown-divider" /></li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
