--- a/templates/view_database.html
+++ b/templates/view_database.html
@@ -22,7 +22,7 @@
           ></button>
         </div>
         <div class="modal-body">
-          <form action="/add" method="POST">
+          <form action="/add_vehicle" method="POST">
             <!--Image-->
             <div class="mb-3">
               <label for="image" class="form-label">Image URL</label>
@@ -84,9 +84,13 @@
               <label for="message-text" class="col-form-label">Previous Issues</label>
               <textarea class="form-control" id="previous-issues" name="PreviousIssues"></textarea>
             </div>
-            <div class="mb-3"></div>
+            <div class="mb-3">
               <label for="message-text" class="col-form-label">Current Issues</label>
               <textarea class="form-control" id="current-issues" name="CurrentIssues"></textarea>
+            </div>
+            <!--databaseid-->
+            <div class="mb-3">
+              <textarea id="database.databaseid" name="databaseid"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Add Vehicle</button>
             <button
