--- a/templates/databases.html
+++ b/templates/databases.html
@@ -85,13 +85,13 @@
             <!-- Edit Database Button -->
             <a 
             class="btn btn-primary" 
-            href="{{url_for('edit_database', dbid=database.databaseid)}}" 
+            href="{{url_for('edit_database', id=database.id, dbid=database.databaseid)}}" 
             role="button"
             >Edit Details</a>
             <!-- Delete Database Button -->
             <a 
             class="btn btn-primary" 
-            href="{{url_for('delete_database', dbid=database.databaseid)}}" 
+            href="{{url_for('delete_database', id=database.id, dbid=database.databaseid)}}" 
             role="button"
             >Delete</a>
           </div>
