Added Aliases and began user functionality

--- a/templates/view_vehicle.html
+++ b/templates/view_vehicle.html
@@ -15,6 +15,7 @@
           <div class="container">
         <h5 class="card-text text-center smallpadding">"{{vehicle.quote}}"</h5>
         <p class="card-text text-center"><b></b>{{vehicle.description}}</p>
+        <p class="card-text"><b>Alias(es): </b> {{vehicle.alias}}</p>
         <p class="card-text"><b>Owner/Driver: </b> {{vehicle.owner}}</p>
         <p class="card-text"><b>Odometer: </b>{{vehicle.odometer}}</p>
         <p class="card-text"><b>Vehicle Type: </b> {{vehicle.type}}</p>
