--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -15,6 +15,11 @@
     <label for="recipient-name" class="col-form-label">Name<br>e.g: Jeremy, The Whip, Betsy</label>
     <input type="text" class="form-control" id="vehicle-name" name='Name' value="{{vehicle.name}}"/>
   </div>
+  <!--Aliases-->
+  <div class="mb-3">
+    <label for="recipient-name" class="col-form-label">Alias(es)</label>
+    <input type="text" class="form-control" id="vehicle-alias" name='Alias' value="{{vehicle.alias}}"/>
+  </div>
   <!--Quote-->
   <div class="mb-3">
     <label for="message-text" class="col-form-label">Quote<br>e.g: Good vehicle, does this and that</label>
