--- a/templates/view_database.html
+++ b/templates/view_database.html
@@ -34,6 +34,11 @@
               <label for="recipient-name" class="col-form-label">Name<br>e.g: Jeremy, The Whip, Betsy</label>
               <input type="text" class="form-control" id="vehicle-name" name='Name'/>
             </div>
+            <!--Aliases-->
+            <div class="mb-3">
+              <label for="recipient-name" class="col-form-label">Alias(es)</label>
+              <input type="text" class="form-control" id="vehicle-alias" name='Alias'/>
+            </div>
             <!--Quote-->
             <div class="mb-3">
               <label for="message-text" class="col-form-label">Quote<br>e.g: Good vehicle, does this and that</label>
