--- a/templates/menu.html
+++ b/templates/menu.html
@@ -7,7 +7,7 @@
             <a 
             class="btn-primary btn" 
             href="{{url_for('signin')}}" 
-            role="button">Sign Up/Log in</a>
+            role="button">Sign Up - Log in</a>
             <a 
             class="btn-primary btn" 
             href="{{url_for('databases')}}" 
