--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,11 +11,11 @@
             <input type="password" name="password" placeholder="Password" class="input__field">
     </div>
     <div class="input_wrapper">
-        <button type="submit" class="btn">Sign Up</button>
+        <button type="submit" class="space btn btn-primary hover">Sign Up</button>
     </div>
     </div>
     <a 
-            class="padding space btn-primary btn" 
+            class="padding space btn-secondary btn" 
             href="{{url_for('signin')}}" 
             role="button">Have an Account? Log in Here</a>
 </body>
