--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -52,7 +52,7 @@
 .hover:hover {
     transform: scale(1.05); 
     background-color: #0004ff;
-    invert(100%);
+    mix-blend-mode: difference;
 }
 
 .bluebackground {
