--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,19 +10,32 @@
             <input type="password" name="password" placeholder="Password" class="input__field">
     </div>
     <div class="input__wrapper space">
-            <label for="DateofBirth">Date of Birth</label>
-            <br>
-            <select type="DateofBirth" name="Day" placeholder="Day">
-                {% for i in range(1, 31) %}
-                    <option value="{{ i }}" >{{ i }}</option>
-                {% endfor %}
-            </select>
-            <select type="DateofBirth" name="Month" placeholder="Month">>
-                <option></option>
-            </select>
-             <select type="DateofBirth" name="Year" placeholder="Year"></select>
-                <option></option>
-            </select>
+        <label for="DateofBirth">Date of Birth</label>
+        <br>
+        <select name="Day" id="Day">
+            {% for i in range(1, 32) %}
+                <option value="{{ i }}" >{{ i }}</option>
+            {% endfor %}
+        </select>
+        <select name="Month" id="Month">
+            <option value="January">January</option>
+            <option value="February">February</option>
+            <option value="March">March</option>
+            <option value="April">April</option>
+            <option value="May">May</option>
+            <option value="June">June</option>
+            <option value="July">July</option>
+            <option value="August">August</option>
+            <option value="September">September</option>
+            <option value="October">October</option>
+            <option value="November">November</option>
+            <option value="December">December</option>
+        </select>
+        <select name="Year" id="Year">
+            {% for i in range(1900, 2026) %}
+                <option value="{{ i }}" >{{ i }}</option>
+            {% endfor %}
+        </select>
     </div>
     <div class="input_wrapper">
         <button type="submit" class="space btn btn-primary hover">Sign Up</button>
