--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{url_for('menu')}}">Gang's Garage</a>
+                <a class="navbar-brand" href="{{url_for('menu', ActiveUser=ActiveUser)}}">Gang's Garage</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -60,6 +60,7 @@
                     >
                         Add
                     </button>
+                    <button>Current User : {{ ActiveUser }}</button>       
                     <li class="nav-item dropdown">
                         <a
                             class="nav-link dropdown-toggle"
