--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
 
-<form action="/signin" method="POST"></form>
-<body>
+<form action="/signin" method="POST">
     <div class="center blueborder solidborder">
         <h2 class="">Sign in to Your Account</h2>
         <div>
@@ -11,12 +10,15 @@
     <div class="input__wrapper">
             <input type="password" name="password" placeholder="Password" class="input__field">
     </div>
+    <div class="input_wrapper">
+        <button type="submit" class="space btn btn-primary hover">Sign In</button>
+    </div>
     </div>
 
     <a 
             class="padding space btn-primary btn " 
             href="{{url_for('signup')}}" 
             role="button">Don't have an account? Create one here</a>
-</body>
+</form>
 
 {%endblock%}
