--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                         >
                             Current User: {{ ActiveUser }}</button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{url_for('user_profile', user=user)}}">User Profile</a></li>
+                            <li><a class="dropdown-item" href="{{url_for('user_profile', ActiveUser=ActiveUser, user=user, uid=uid)}}">User Profile</a></li>
                         </ul>
                     </li>
 
