--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -4,7 +4,7 @@
 <div class="card mb-3 text-center justify-content-center">
     
       <div class="container background padding">
-        <h3 class="text-center justify-content-center padding"><b>{{vehicle.name}} Details</b></h3>
+        <h3 class="text-center justify-content-center padding"><b>{{user.username}} Details</b></h3>
           <div class="container">
             <img
               src="{{user.profile_pic}}"
@@ -15,8 +15,6 @@
           </div>
           <div class="container">
         <h5 class="card-text text-center smallpadding">"{{user.username}}"</h5>
-        <p class="card-text text-center"><b></b>{{vehicle.description}}</p>
-        <p class="card-text"><b>Alias(es): </b> {{vehicle.alias}}</p>
       </div>
     </div>
   </div>
