Fixed Signup and User Profile, can now edit details

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,6 +4,10 @@
         <h2 class="">Create An Account</h2>
         <div>
             <div class="input__wrapper space">
+            <input type="profile_pic" name="profile_pic" placeholder="Profile Picture (link)" class="input__field">
+        </div>  
+        <div>
+            <div class="input__wrapper space">
             <input type="username" name="username" placeholder="Username" class="input__field">
         </div>            
     <div class="input__wrapper space">
