--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -1,21 +1,28 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
 
 
-<div class="card mb-3 text-center justify-content-center">
+<div class="card mb-3 text-left justify-content-left">
     
       <div class="container background padding">
-        <h3 class="text-center justify-content-center padding"><b>{{user.username}} Details</b></h3>
+        <h3 class="text-left justify-content-left padding"><b>{{user.username}} Details</b></h3>
           <div class="container">
             <img
               src="{{user.profile_pic}}"
-              class="card-img-top text-center justify-content-center smallpadding"
-              style="width: 800px"
-              alt="Picture of {{vehicle.name}}"
+              class="card-img-top text-left justify-content-left smallpadding"
+              style="height: 200px; width: 200px; border-radius: 50%;"
+              alt="Picture of {{user.username}}"
             />
           </div>
           <div class="container">
-        <h5 class="card-text text-center smallpadding">"{{user.username}}"</h5>
+        <h5 class="card-text text-left smallpadding">Username: {{user.username}}</h5>
+        <h5 class="card-text text-left smallpadding">Date of Birth: {{user.DateofBirth}}</h5>
       </div>
+      <!-- Edit User Details Button -->
+            <a 
+            class="btn btn-primary" 
+            href="{{url_for('edit_user', id=user.id, ActiveUser=ActiveUser, userid=user.id)}}" 
+            role="button"
+            >Edit User Details</a>
     </div>
   </div>
 </div>
