--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -3,6 +3,9 @@
 <form action="/edit_user" method="POST">
 
 <input type="hidden" name="id" value="{{user.id}}">
+<input type="hidden" name="ActiveUser" value="{{user.username}}">
+<input type="hidden" name="userid" value="{{user.id}}">
+
 
   <!--Image-->
   <div class="mb-3">
