--- a/templates/quiz_questions.html
+++ b/templates/quiz_questions.html
@@ -16,7 +16,7 @@
             <option value="Suburbs">In the suburbs</option>
             <option value="Outskirts">In the outskirts of town, some other houses nearby but not lined down the street</option>
             <option value="City">In the city</option>
-            <option value="Middle of nowhere">Very far from town, along some gravel roads</option>
+            <option value="Far From Town">Very far from town, likely along some gravel roads</option>
             <option value="Farm">On a farm</option>
         </select>
     </div>
