--- a/templates/view_database.html
+++ b/templates/view_database.html
@@ -25,7 +25,7 @@
           <form action="/add_vehicle" method="POST" dbid="database.databaseid">
             <!--Image-->
             <div class="mb-3">
-              <label for="image" class="form-label">Image URL</label>
+              <label for="image" class="form-label">Image URL (Image Address)</label>
               <textarea class="form-control" id="vehicle-img" name="Image"></textarea>
               
             </div>
@@ -36,7 +36,7 @@
             </div>
             <!--Aliases-->
             <div class="mb-3">
-              <label for="recipient-name" class="col-form-label">Alias(es)</label>
+              <label for="recipient-name" class="col-form-label">Other Names/Alias(es)</label>
               <input type="text" class="form-control" id="vehicle-alias" name='Alias'/>
             </div>
             <!--Quote-->
