--- a/templates/edit_vehicle.html
+++ b/templates/edit_vehicle.html
@@ -19,7 +19,7 @@
   </div>
   <!--Aliases-->
   <div class="mb-3">
-    <label for="recipient-name" class="col-form-label">Alias(es)</label>
+    <label for="recipient-name" class="col-form-label">Other Names/Alias(es)</label>
     <input type="text" class="form-control" id="vehicle-alias" name='Alias' value="{{vehicle.alias}}"/>
   </div>
   <!--Quote-->
