Worked on idealvehicle model

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,7 +7,9 @@ role="button">Quiz</a>
 
 <p><b>Place of Residence:</b> {{Residence}}<br><b>Number of people usually carried:</b> {{People}}<br><b>PRIMARY purpose of the vehicle:</b> {{Purpose}}<br><b>Amount of towing done:</b> {{Towing}}<br><b>Stuff carried often? </b>{{Carry}}</p>
 
-<p>Ideal Vehicle: {{IdealVehicle}}</p>
+<p>Ideal Vehicle: {{Ideal}}</p>
+
+<p>{{ Description }}</p>
 
 
 {%endblock%}
