Quiz working, experimented with multiple maximums

--- a/templates/quiz_questions.html
+++ b/templates/quiz_questions.html
@@ -14,9 +14,9 @@
         <br>
         <select name="Residence" id="Residence">
             <option value="Suburbs">In the suburbs</option>
-            <option value="Outskirts">In the outskirts of town, some other houses nearby but not lined down the street</option>
+            <option value="Outskirts">Outskirts of town, some other houses nearby but not lined down the street</option>
             <option value="City">In the city</option>
-            <option value="Far From Town">Very far from town, likely along some gravel roads</option>
+            <option value="Far From Town">Very far from town, potentially along some gravel roads</option>
             <option value="Farm">On a farm</option>
         </select>
     </div>
@@ -32,12 +32,12 @@
         </select>
     </div>
     <div class="input__wrapper space">
-        <label for="Purpose">What will the vehicles <u>primary</u> purpose be?</label>
+        <label for="Purpose">What will the vehicles <b>primary</b> purpose be?</label>
         <br>
         <select name="Purpose" id="Purpose">
             <option value="Daily Runabout">A Daily runabout: eg; take me from home to work, and stop by the shops on the way home...</option>
             <option value="Family Daily Runabout">A Daily runabout for a family, e.g; take the kids to school, then go to the shops, to work, etc...</option>
-            <option value="Farm">Mainly used on a farm, transporting goods both in and outside the property, making the occasional trip to town</option>
+            <option value="Farm Vehicle">Mainly used on a farm, transporting goods both in and outside the property, making the occasional trip to town</option>
             <option value="Fun">Mainly driven for the thrill of driving</option>
             <option value="Off-Road">Almost exclusively driven off road</option>
             <option value="Utility">Regularly carrying heavy work supplies such as an electrican, plumber, or construction worker's tools and supplies</option>
@@ -58,11 +58,13 @@
         </select>
     </div>
     <div class="input__wrapper space">
-        <label for="Carry">Do you <u>frequently</u> carry a lot of goods?</label>
+        <label for="Carry">Do you carry a lot of goods?</label>
         <br>
         <select name="Carry" id="Carry">
-            <option value="No">No, the boot/tray is usually quite empty</option>
-            <option value="Yes">Yes, the boot/tray is usually full</option>
+            <option value="Strong No">No, the boot/tray is usually empty beyond a few shopping bags</option>
+            <option value="No">No, sometimes the boot/tray is used but not often or to full capacity</option>
+            <option value="Yes">Yes, the boot/tray is used often</option>
+            <option value="Strong Yes">Yes, the boot/tray is used often and usually full</option>
         </select>
     </div>
     <div class="input_wrapper">
