--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,7 +14,7 @@
             role="button">Databases</a>
             <a 
             class="btn-primary btn" 
-            href="{{url_for('quiz', ActiveUser=ActiveUser, userid=userid)}}" 
+            href="{{url_for('quiz_questions', ActiveUser=ActiveUser, userid=userid)}}" 
             role="button">Quiz</a>
             <a 
             class="btn-primary btn" 
