--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -22,6 +22,19 @@
     object-fit: cover;
 }
 
+.idealcar {
+    height: 100%;
+    max-height:300px ;
+    min-height: 200px;
+    width: 100%;
+    max-width:400px ;
+    min-width: 250px;
+    object-fit: cover;
+    border: solid;
+    border-color: black;
+    border-radius: 5%;
+}
+
 .card-img-top {
     border-radius: 5%;
 }
