Changed CSS for menu (center)

--- a/templates/quiz_questions.html
+++ b/templates/quiz_questions.html
@@ -35,13 +35,13 @@
         <label for="Purpose">What will the vehicles <b>primary</b> purpose be?</label>
         <br>
         <select name="Purpose" id="Purpose">
-            <option value="Daily Runabout">A Daily runabout: eg; take me from home to work, and stop by the shops on the way home...</option>
-            <option value="Family Daily Runabout">A Daily runabout for a family, e.g; take the kids to school, then go to the shops, to work, etc...</option>
-            <option value="Farm Vehicle">Mainly used on a farm, transporting goods both in and outside the property, making the occasional trip to town</option>
-            <option value="Fun">Mainly driven for the thrill of driving</option>
-            <option value="Off-Road">Almost exclusively driven off road</option>
-            <option value="Utility">Regularly carrying heavy work supplies such as an electrican, plumber, or construction worker's tools and supplies</option>
-            <option value="Workhorse">Primarily used as a quick and easy way of transporting a lot of goods, usually by chucking them in the back of the vehicle</option>
+            <option value="Daily Runabout">Daily Runabout: Go to work and stop by the shops on the way home...</option>
+            <option value="Family Daily Runabout">Family Daily Runabout: Take kids to school, then go to the shops, to work, etc...</option>
+            <option value="Farm Vehicle">Farm Vehicle: Used on a farm, transports goods both in and outside the property, makes occasional trip to town</option>
+            <option value="Fun">Fun: Mainly driven for the thrill of driving</option>
+            <option value="Off-Road">Off Road: Almost exclusively driven off road such as on a property or 4WD track</option>
+            <option value="Utility">Utility/Trade Vehicle: Carries heavy work supplies such as an electrican, or plumber's tools and supplies</option>
+            <option value="Workhorse">Workhorse: Used as a quick and easy way of transporting a lot of goods</option>
         </select>
     </div>
     <div class="input__wrapper space">
