--- a/templates/view_vehicle.html
+++ b/templates/view_vehicle.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
 
-<div class="card mb-3 text-center justify-content-center">
+<div class="card mb-3 text-center">
     
       <div class="container background padding">
         <h3 class="text-center justify-content-center padding"><b>{{vehicle.name}} Details</b></h3>
