--- a/templates/quiz_questions.html
+++ b/templates/quiz_questions.html
@@ -6,10 +6,10 @@
 <input type="hidden" name="ActiveUser" value="{{user.username}}">
 <input type="hidden" name="userid" value="{{user.id}}">
 
-<div class="">
+<div class="whitetext center" style="position:absolute; text-align:center; margin-top:-75px">
         <h2 class="">Vehicle Quiz</h2>
         
-    <div class="input__wrapper space">
+    <div class="input__wrapper; space" >
         <label for="Residence">Which best describes where you live?</label>
         <br>
         <select name="Residence" id="Residence">
