--- a/templates/view_database.html
+++ b/templates/view_database.html
@@ -123,7 +123,7 @@
 
 
   <!--Grid Layout-->
-  <div class="container">
+  <div class="container" style="position:absolute">
     <div class="row">
       {% for vehicle in vehicles %}
       <div class="col-12 col-md-6 col-lg-4 justify-content-center">
