--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" class="blackbackground">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -34,9 +34,9 @@
 
 
     <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-dark navbar-expand-lg" style="background-image: url(static/CorkTexture.jpeg); background-size:250px; background-repeat:repeat-y; background-repeat:repeat-x;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{url_for('menu', ActiveUser=ActiveUser, userid=userid)}}">Gang's Garage</a>
+                <a class="navbar-brand titlelink" href="{{url_for('menu', ActiveUser=ActiveUser, userid=userid)}}">Gang's Garage</a>
                 <button
                     class="navbar-toggler"
                     type="button"
@@ -61,6 +61,7 @@
                     >
                         Add
                     </button>
+                    <button onclick="history.back()">Go Back</button>
 
                     <!--Dropdown menu for user options-->
                     <li class="nav-item dropdown">
