--- a/templates/databases.html
+++ b/templates/databases.html
@@ -60,10 +60,10 @@
 
 
   <!--Grid Layout-->
-  <div class="container">
-    <div class="row">
+  <div class="container" style="position:absolute">
+    <div class="row" style="text-align: center">
       {% for database in databases %}
-      <div class="col-12 col-md-6 col-lg-4 justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4">
         <div class="card mb-4 custom-bg">
           <img
             src="{{database.image}}"
