--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,25 +1,32 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
-<h1 class="center">Welcome, {{ ActiveUser }}!</h1>
+<h1 class="center whitetext" style="margin-top: -40px;">Welcome, {{ ActiveUser }}!</h1>
 <body>
-    <div class="center blueborder solidborder">
-        <h2 class="">Gang's Garage: The Complete Collection</h2>
-        <div>
+    <div class="othercenter whiteborder solidborder whitetext brownbackground" style="margin-top:-100px; padding-bottom: 280px">
+        <h2 class="" style="text-align: center;">Gang's Garage: <br> The Complete Collection</h2>
+        <div style="text-align: center">
             <a 
-            class="btn-primary btn" 
+            class="green-btn btn-primary btn" 
+            style="margin-bottom: 10px"
             href="{{url_for('signin')}}" 
-            role="button">Sign Up - Log in</a>
+            role="button">Log In</a>
+            <br>
             <a 
-            class="btn-primary btn" 
+            class="green-btn btn-primary btn" 
+            style="margin-bottom: 10px"
+            href="{{url_for('signup')}}" 
+            role="button">Sign Up</a>
+            <br>
+            <a 
+            class="green-btn btn-primary btn" 
+            style="margin-bottom: 10px"
             href="{{url_for('databases', ActiveUser=ActiveUser, userid=userid)}}" 
             role="button">Databases</a>
+            <br>
             <a 
-            class="btn-primary btn" 
+            class="green-btn btn-primary btn" 
             href="{{url_for('quiz_questions', ActiveUser=ActiveUser, userid=userid)}}" 
             role="button">Quiz</a>
-            <a 
-            class="btn-primary btn" 
-            href="{{url_for('index', ActiveUser=ActiveUser, userid=userid)}}" 
-            role="button">Index</a>
+            <br>
         </div>
     </div>
 </body>
