--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}{% block content %}
 <form action="/signup" method="POST">
-    <div class="center blueborder solidborder">
-        <h2 class="">Create An Account</h2>
+    <div class="center border whiteborder brownbackground" style="margin-top: 50px; padding-top: 2%; padding-left: 5%; padding-right: 5%; padding-bottom: 400px;">
+        <h2 class="whitetext">Create An Account</h2>
         <div>
-            <div class="input__wrapper space">
+            <div class="input__wrapper space" style="text-align: center">
             <input type="profile_pic" name="profile_pic" placeholder="Profile Picture (link)" class="input__field">
         </div>  
         <div>
-            <div class="input__wrapper space">
+            <div class="input__wrapper space" style="text-align: center">
             <input type="username" name="username" placeholder="Username" class="input__field">
         </div>            
-    <div class="input__wrapper space">
+    <div class="input__wrapper space" style="text-align: center">
             <input type="password" name="password" placeholder="Password" class="input__field">
     </div>
-    <div class="input__wrapper space">
+    <div class="input__wrapper whitetext" style="text-align: center">
         <label for="DateofBirth">Date of Birth</label>
         <br>
         <select name="Day" id="Day">
@@ -41,13 +41,15 @@
             {% endfor %}
         </select>
     </div>
-    <div class="input_wrapper">
-        <button type="submit" class="space btn btn-primary hover">Sign Up</button>
+    <div class="input_wrapper" style="text-align: center">
+        <button type="submit" class="space green-btn btn btn-primary">Sign Up</button>
     </div>
     </div>
-</form>
-<a 
-            class="padding space btn-secondary btn" 
+
+    <a 
+            class="space btn-secondary btn hover" style="padding-top:8px; padding-bottom: 8px; padding-right: 10px;"
             href="{{url_for('signin')}}" 
             role="button">Have an Account? Log in Here</a>
+</form>
+
 {%endblock%}
